################################################################################
# Copyright (c) 2021, Initialsoft, Inc.
# All rights reserved.
#
# [description]
#
# author   : hunt978(hunt978@initialsoft.com)
# create   : 2021-03-15 03:15:35 UTC
# modified : 2021-03-17 13:43:15 UTC
################################################################################

# cmake version
cmake_minimum_required(VERSION 3.5.0)


# target
add_executable(linkedlist main.c)
